# sloth

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
docs/: architecture.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/api/: index.ts
