[package]
name = "sloth-server"
version = "0.1.0"
edition = "2021"

[dependencies]
sloth-core = { path = "../core" }
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

